# ssf3000

./: CMakeLists.txt  LICENSE  README.md
lib/tinygltf/: json.hpp  tiny_gltf.h
shaders/: default.hlsl
src/: F3000.cpp  F3000.h  bitmap.h  dx.cpp  dx.h  main.cpp  main.h  ss3000.rc
src/gfx/: ConstantBuffer.h
src/gfx/dx/: AppCB.h  ConstantBuffers.h  DXConstantBuffer.h  DXRenderer.cpp  DXRenderer.h  FrameCB.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h
src/gfx/dx/objects/: AObject.cpp  AObject.h  Cube.cpp  Cube.h  Head.cpp  Head.h  Triangle.cpp  Triangle.h
